force-app/main/default/objects/Calendar_Event__c/Calendar_Event__c.object-meta.xml
<CustomObject>
    <label>Calendar Event</label>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>CalendarEvent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>