force-app/main/default/objects/Calendar_Event__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start time of the event</description>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>