force-app/main/default/objects/Calendar_Event__c/validationRules/Avoiding_Date_Traversal.validationRule-meta.xml
<ValidationRule>
    <fullName>Avoiding_Date_Traversal</fullName>
    <active>true</active>
    <description>Start and End times should belong to the same day (We are not allowing users to schedule events that take more than one day)</description>
    <errorConditionFormula>DATEVALUE(Start_Time__c) &lt;&gt; DATEVALUE(End_Time__c)</errorConditionFormula>
    <errorMessage>Your events can not span multiple dates</errorMessage>
</ValidationRule>