force-app/main/default/objects/Calendar_Event__c/validationRules/Sorted_Times.validationRule-meta.xml
<ValidationRule>
    <fullName>Sorted_Times</fullName>
    <active>true</active>
    <description>Avoids End Time from being before or equal Start Time</description>
    <errorConditionFormula>End_Time__c &lt;= Start_Time__c</errorConditionFormula>
    <errorMessage>Please enter valid start and end times</errorMessage>
</ValidationRule>